# codechallengr

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.txt  docker-compose.yml  entry.sh  init.sql
migrations/2022-01-08-013239_exercises/: down.sql  up.sql
migrations/2022-01-08-013247_users/: up.sql
migrations/2022-01-08-013258_solutions/: down.sql  up.sql
migrations/2022-02-05-001105_likes/: up.sql
src/: lib.rs  schema.rs  tests.rs
src/db/: exercise_manipulation.rs  mod.rs  score_manipulation.rs  solution_manipulation.rs  tempCodeRunnerFile.rs  user_manipulation.rs
src/models/: exercise.rs  likes.rs  mod.rs  models.rs  permissions.rs  schema.rs  score.rs  solution.rs  users.rs
src/routes/: exercise.rs  login.rs  mod.rs  routes.rs  score.rs  solution.rs  user.rs
src/user_manipulation/: mod.rs  user_manipulation.rs
src/utils/: mod.rs  verify_permission.rs
vue/: README.md  index.html  package.json  vite.config.ts
vue/src/: App.vue  main.ts
vue/src/api/: exercise.ts  login.ts  score.ts  solution.ts  user.ts
vue/src/assets/: animations.css  base.css
vue/src/components/: ErrorCard.vue  ExerciseCard.vue  LoadingCard.vue  NavBar.vue
vue/src/components/styled/: TypewriterHeading.vue
vue/src/models/: Claim.ts  Exercise.ts  Score.ts  Solution.ts  User.ts
vue/src/router/: index.ts
vue/src/views/: ExerciseView.vue  ExercisesView.vue  HomeView.vue  LeaderboardView.vue  LoginView.vue  NewExerciseView.vue  NotFoundView.vue  SignupView.vue  UserView.vue
