[package]
name = "hackerrank_meets_aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket_codegen = "0.5.0-rc.1"
# rocket_contrib = "0.5.0-rc.1"
dotenv = "0.15.0"
# chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.133"
bcrypt = "0.10.1"
serde_json = "1.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.diesel]
version = "1.4.4"
features = ["mysql", "chrono", "numeric"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
