[package]
name = "hackerrank_meets_aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.136"
bcrypt = "0.10.1"
jsonwebtoken = "8.0.1"

[dependencies.serde_json]
version = "1.0.78"
features = ["alloc"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.diesel]
version = "1.4.8"
features = ["mysql", "chrono", "numeric"]

[dependencies.diesel-derive-enum]
version = "1.1.2"
features = ["mysql"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "secrets"]
